Fix Spacing on Homepage (For Real)

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ h2{
 /*Content Div*/
 .content-div{
     background-color: white;
-    padding-bottom: 40px;
+    padding: 0 20px 40px;
 }
 
 h3{
@@ -175,7 +175,7 @@ h3{
     .app-grid {
         grid-template-columns: 1fr;
         max-width: 500px;
-        margin: auto 10%;
+        margin: auto auto;
     }
     .item-link:last-of-type {
         grid-column: span 1;
